--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,7 +9,7 @@ FRONTEND_URL=http://localhost:3000
 MICROSOFT_CLIENT_ID=your-azure-app-client-id
 MICROSOFT_CLIENT_SECRET=your-azure-app-client-secret
 MICROSOFT_TENANT_ID=your-azure-tenant-id
-MICROSOFT_REDIRECT_URI=http://localhost:8000/api/v1/auth/callback
+MICROSOFT_REDIRECT_URI=https://pictibmec-gmb7b9daeteff2ep.brazilsouth-01.azurewebsites.net/api/v1/auth/callback
 
 # Configurações de banco de dados (opcional)
 DATABASE_URL=sqlite:///./database.db
